# thereel

./: CMakeLists.txt
application/: CMakeLists.txt  VideoForm.qml  application.pro  com.vicr123.thereel.desktop  controlstrip.cpp  controlstrip.h  controlstrip.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
application/translations/: aa_ER.ts  aa_ET.ts  am_ET.ts  ar_DZ.ts  ar_KM.ts  ar_KW.ts  ar_LB.ts  ar_MR.ts  ar_OM.ts  ar_PS.ts  ar_SA.ts  ar_SD.ts  ar_SO.ts  ar_TN.ts  ar_YE.ts  as_IN.ts  az_AZ.ts  bg_BG.ts  bs_BA.ts  cr_CA.ts  de_DE.ts  en_CA.ts  es_AR.ts  es_BO.ts  es_CO.ts  es_ES.ts  es_PA.ts  es_SV.ts  es_VE.ts  et_EE.ts  fi_FI.ts  fr_FR.ts  gn_PY.ts  ha_NE.ts  hr_HR.ts  hu_HU.ts  hy_AM.ts  id_ID.ts  is_IS.ts  it_IT.ts  (+32 more)
